--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@
   border-radius: 4px;
   color: #fff;
   box-shadow: #333 0px 1px 5px;
+  top: 4px;
 }
 .img-wrapper img {
   width: 100px;
@@ -51,7 +52,7 @@
 .item {
   float: left;
   width: 120px;
-  padding: 20px;
+  padding: 14px;
   height: 70px;
 }
 .add-to-cart img {
@@ -71,5 +72,10 @@
   height: 20px;
   border-radius: 50%;
   color: #fff;
+}
+
+button.remove-cart-btn {
+  background-color: blueviolet;
+  margin-top: 8px;
 }
 /*  */
